<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/data_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:textSize="32dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/result_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:visibility="gone"
        android:textSize="32dp"
        android:text=""
        android:textColor="#706E6E"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Linecolor"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:layout_marginBottom="6dp"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_clr"
                android:onClick="onClearClick"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_back"
                android:onClick="onBackClick"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/btnBackground2"
                 />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_mod"
                android:onClick="onOperatorClick"
                android:text="@string/modulus" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_div"
                android:onClick="onOperatorClick"
                android:text="@string/Division" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_7"
                android:onClick="onDigitClick"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_8"
                android:onClick="onDigitClick"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_9"
                android:onClick="onDigitClick"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_mul"
                android:onClick="onOperatorClick"
                android:text="@string/Multiply" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_4"
                android:onClick="onDigitClick"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_5"
                android:onClick="onDigitClick"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_6"
                android:onClick="onDigitClick"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_sub"
                android:onClick="onOperatorClick"
                android:text="@string/Minus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_1"
                android:onClick="onDigitClick"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_2"
                android:onClick="onDigitClick"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_3"
                android:onClick="onDigitClick"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_plus"
                android:onClick="onOperatorClick"
                android:text="@string/Addition" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_allclear"
                android:onClick="onAllClearClick"
                android:textSize="21sp"
                android:text="@string/AllClear" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_0"
                android:onClick="onDigitClick"
                android:text="@string/_0" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_dot"
                android:onClick="onDigitClick"
                android:text="@string/Decimal" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorbutton"
                android:id="@+id/btn_equal"
                android:onClick="onEqualClick"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnBackground2"
                android:text="@string/Equals" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>